added info-link section

--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
      
     </section>
     <section class="info-links">
-      <article>
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <a href="#">Ipsum</a>
+      <article class="info-link-container">
+        <i class="fa-solid fa-magnifying-glass info-link-logo"></i>
+        <a href="#" class="info-link-text">Ipsum</a>
       </article>
 
-      <article>
-        <i class="fa-solid fa-image"></i>
-        <a href="#">Adipisicing</a>
+      <article class="info-link-container">
+        <i class="fa-solid fa-image info-link-logo"></i>
+        <a href="#" class="info-link-text">Adipisicing</a>
       </article>
 
-      <article>
-        <i class="fa-solid fa-envelope"></i>
-        <a href="#">Placeat</a>
+      <article class="info-link-container">
+        <i class="fa-solid fa-envelope info-link-logo"></i>
+        <a href="#" class="info-link-text">Placeat</a>
       </article>
 
-      <article>
-        <i class="fa-solid fa-heart"></i>
-        <a href="#">Officia</a>
+      <article class="info-link-container">
+        <i class="fa-solid fa-heart info-link-logo"></i>
+        <a href="#" class="info-link-text">Officia</a>
       </article>
     </section>
   </main>
