added hotel part

--- a/index.html
+++ b/index.html
@@ -64,7 +64,29 @@
         <a href="#" class="info-link-text">Officia</a>
       </article>
     </section>
+
+    <section class="hotel-info">
+      <h2 class="hotel-info-header">Choose a Hotel</h2>
+      <article class="hotel first-hotel">
+        <img class="hotel-img" src="./img/hotel-1.jpg" alt="hotel-1">
+        <h3 class="hotel-name-heading">Crowne Plaza</h3>
+          <p class="hotel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur doloribus, quas optio exercitationem veniam illo, iusto numquam eos a dolore, voluptates distinctio? Repellat voluptates dolorem, optio nulla nisi rerum modi?</p>
+      </article>
+      <article class="hotel second-hotel">
+        <img class="hotel-img" src="./img/hotel-2.jpg" alt="hotel-2">
+        <h3 class="hotel-name-heading">Hotel Bliss</h3>
+          <p class="hotel-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nesciunt voluptatum praesentium dolore, accusamus odio natus quo perferendis necessitatibus vel aliquam eius ad obcaecati cum!</p>
+      </article>
+      <article class="hotel third-hotel">
+        <img class="hotel-img" src="./img/hotel-3.jpg" alt="hotel-3">
+        <h3 class="hotel-name-heading">Budget Suites</h3>
+          <p class="hotel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque cumque repellat, optio eos animi minima rerum facere deserunt nesciunt illo quae corrupti doloremque ullam sequi magni est dolorum enim cum iusto error, fugiat saepe! Iure quod, reiciendis suscipit facilis, animi quam nam velit qui enim praesentium</p>
+      </article>
+    </section>
   </main>
+  <footer>
+    
+  </footer>
 
   <script src="https://kit.fontawesome.com/b309cdc068.js" crossorigin="anonymous"></script>
 </body>
